Выполнение ТЗ 12 (не работает один тест)